--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Я впервые разместил свой код на удаленном репозитории</h1>
-    <p>Изменения, которые я позже удалю...</p>
+    <h2>Hello world!</h2>
 </body>
 </html>
